--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
+file.reference.jcalendar-1.4.jar=E:\\ISTA\\Librerias y apps\\librerias\\jcalendar-1.4.jar
 user.properties.file=C:\\Users\\Sebastian\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
