--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,11 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Sistema_Catering
 excludes=
+file.reference.jcalendar-1.4.jar=E:\\ISTA\\CICLO2\\BD\\librerias\\jcalendar-1.4.jar
 file.reference.postgresql-42.2.5.jar=E:\\ISTA\\CICLO2\\BD\\librerias\\postgresql-42.2.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.postgresql-42.2.5.jar}
+    ${file.reference.postgresql-42.2.5.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
