--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,12 +34,16 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Sistema_Catering
 excludes=
 file.reference.jcalendar-1.4.jar=E:\\ISTA\\CICLO2\\BD\\librerias\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\Sebastian\\Downloads\\jcalendar-1.4.jar
 file.reference.postgresql-42.2.5.jar=E:\\ISTA\\CICLO2\\BD\\librerias\\postgresql-42.2.5.jar
+file.reference.postgresql-9.4-1206-jdbc4.jar=C:\\Users\\Sebastian\\Downloads\\postgresql-9.4-1206-jdbc4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.postgresql-42.2.5.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.postgresql-9.4-1206-jdbc4.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
