--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,4 @@
 compile.on.save=true
+file.reference.jcalendar-1.4.jar-1=E:\\ISTA\\Librerias y apps\\librerias\\jcalendar-1.4.jar
+file.reference.postgresql-9.4-1206-jdbc4.jar=E:\\ISTA\\Librerias y apps\\librerias\\jasperreports-4.7.1
 user.properties.file=C:\\Users\\Pandora\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
